feat: support summer courses
